--- a/site/.htaccess
+++ b/site/.htaccess
@@ -1,4 +1,4 @@
 # Do not remove this line or mod_rewrite rules and search engine friendly URLs will stop working
 RewriteBase /
 RewriteEngine on
-RewriteRule ^/p/.*  /index.html
+RewriteRule ^/?p/.*$ index.html [L]
